@@ -337,7 +337,9 @@ proc buildDb {ch} {
     set syntax(trace)           "s x x*"
     set syntax(trace\ add)      "s x x x"
     set syntax(trace\ add\ command)   "x x c3"
-    set syntax(trace\ add\ execution) "x x c2"
+    set syntax(trace\ add\ execution) "x s c2"
+    set syntax(trace\ add\ execution\ leave) "c4"
+    set syntax(trace\ add\ execution\ leavestep) "c4"
     set syntax(trace\ add\ variable)  "v x c3"
     set syntax(trace\ remove)      "s x x x"
     set syntax(trace\ remove\ command)   "x x x"
